fix: left-aligned placeholder text

--- a/catalog-scss/index.scss
+++ b/catalog-scss/index.scss
@@ -30,3 +30,7 @@
   background: colors.$white;
   font: 16px Raleway, sans-serif;
 }
+
+::placeholder {
+  text-align: start;
+}
